--- a/index.html
+++ b/index.html
@@ -164,7 +164,10 @@
         
 
     <script>
-        const PLACEHOLDER_STRING = 'Write a function that generates a valid random card deck.\nreturn type of this function should be an array of elements, each element represents a card ( value and shape )';
+        const PLACEHOLDER_STRING = `
+        Write a formal java script function that generates a valid random card deck, simulating a card deck after shuffling. 
+        return type of this function should be an array of elements, each element represents a card ( value and shape )
+        `;
         const LINE_NUMBERS = 40;
         let app;
         const numbersHtmlElement = document.getElementById('numbers');
